# commit-check

./: Cargo.toml  LICENSE  README.md
.github/: renovate.json5
.github/workflows/: ci.yml
core/: Cargo.toml  Makefile
core/src/: error.rs  lib.rs  main.rs
core/src/check/: length.rs
core/tests/: it_check.rs
host/: Cargo.toml
host/src/: main.rs
