[package]
name = "commit-check-core"
version = "0.1.0"
description = "Commit-check core component"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "core"
path = "src/main.rs"

[dev-dependencies]
assert_matches = "1.5.0"
