[package]
name = "commit-check"
version = "0.1.0"
description = "Commit-check Webassembly runtime and CLI"
authors.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "commit-check"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = "4.4"
indoc = "2.0.4"
thiserror.workspace = true
wasmtime = "16.0"
