[package]
name = "commit-check"
version = "0.1.0"
description = "Commit-check Webassembly runtime and CLI"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "commit-check"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = "4.5"
indoc = "2.0.4"
thiserror.workspace = true
wasmtime = "18.0"
