[package]
name = "commit-check"
version = "0.1.0"
description = "Commit-check Webassembly runtime and CLI"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "commit-check"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
indoc = "2.0.5"
thiserror.workspace = true
wasmtime = "21.0"
